fix(info-banner): change icon color in contrast mode

--- a/packages/components/src/info-banner/InfoBanner.module.css
+++ b/packages/components/src/info-banner/InfoBanner.module.css
@@ -57,6 +57,10 @@
 .icon {
   color: var(--midas-icon-primary);
   min-width: 20px;
+
+  @media (forced-colors: active) {
+    color: currentColor;
+  }
 }
 
 .dismissable {
